[FIX] 修复单元测试报错的问题